--- a/css/styles.css
+++ b/css/styles.css
@@ -894,7 +894,11 @@ font-weight: 700;
 font-size: 20px;
 letter-spacing: 0.03em;
 line-height: 1.15;
-color: var(--title-text-color)
+color: var(--title-text-color);
+}
+
+.modal-form-field {
+  margin-bottom: 10px;
 }
 
 .modal-form-input-desc {
@@ -927,23 +931,19 @@ border-radius: 4px;
 
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 12px;
   transform: translateY(-50%);
 
-  width: ;
-  height: ;
-  background-color: ;
-  transition: background-color var(--transition-dur-and-func);
-
+  /* width: ;
+  height: ; */
+  /* background-color: ; */
+  transition: background-color var(--transition-dur-and-func), fill var(--transition-dur-and-func);
+  fill: var(--title-text-color);
 }
-
-.modal-form-input-wrapper {
-  position: relative;
-}
-
 
 .modal-form-input:focus + .modal-form-icon {
-  background-color: #2196f3;
+  border-color: var(--accent-color);
+  fill: var(--accent-color);
 }
 
 .modal-form-message {
@@ -961,11 +961,18 @@ border-radius: 4px;
 .modal-form-message::placeholder {
   text-transform: uppercase;
   } 
+  
 
 .modal-form-message:focus {
   outline: none;
   border-color: ;
 }
+
+
+.modal-form-input-wrapper {
+  position: relative;
+}
+
 
 .modal-form-own-checkbox {
   border: ;
@@ -978,6 +985,7 @@ margin-right: ;
 .modal-form-own-checkbox-icon {
   fill: ;
   display: none;
+  /* padding: 2,5px 4px; */
 }
 
 .modal-form-checkbox:focus + .modal-form-own-checkbox {
