--- a/css/styles.css
+++ b/css/styles.css
@@ -899,9 +899,10 @@ footer {
   justify-content: center;
   align-items: center;
   margin-left: 12px;
+  align-self: flex-end;
 
   min-width: 200px;
-  min-height: 50px;
+  height: 50px;
   padding: 13px, 28px;
 
   font-weight: 700;
@@ -914,8 +915,6 @@ footer {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
-
-  transition: border-color var(--transition-dur-and-func);
 }
 
 .subscribe-form-input::placeholder {
