--- a/css/styles.css
+++ b/css/styles.css
@@ -899,11 +899,12 @@ footer {
   justify-content: center;
   align-items: center;
   margin-left: 12px;
-  align-self: flex-end;
+  box-sizing: border-box;
+  /* align-self: flex-end; */
 
-  min-width: 200px;
-  height: 50px;
-  padding: 13px, 28px;
+  /* min-width: 200px;
+  height: 50px; */
+  padding: 10px 28px;
 
   font-weight: 700;
   font-size: 16px;
@@ -911,10 +912,12 @@ footer {
   letter-spacing: 0.06em;
   color: var(--primary-background-color);
   background-color: var(--accent-color);
-  border-color: var(--accent-color);
+  border: none;
+  /* border-color: var(--accent-color); */
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
+  transition: box-shadow var(--transition-dur-and-func);
 }
 
 .subscribe-form-input::placeholder {
@@ -933,6 +936,9 @@ footer {
   border-color: var(--accent-color);
 }
 
+.subscribe-form-submit:focus {
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
 /* modal form */
 
 .modal {
